--- a/vit_ai_vs_real_classification_xai_20.ipynb
+++ b/vit_ai_vs_real_classification_xai_20.ipynb
@@ -932,14 +932,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ae21e743",
    "metadata": {},
    "outputs": [],
    "source": [
     "os.makedirs('models', exist_ok=True)\n",
     "model_to_save = model.module if isinstance(model, nn.DataParallel) else model\n",
-    "torch.save(model_to_save.state_dict(), 'models/vit_ai_detection.pth')"
+    "torch.save(model_to_save.state_dict(), 'models/vit_ai_detection_20.pth')"
    ]
   }
  ],
